# cbsplotlib

./: .gitignore  CHANGELOG.rst  CONTRIBUTING.rst  README.rst  install_exe.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
data/highcharts_examples/: bar_plot_negative_stack.csv  bar_plot_negative_stack.json  bar_plot_warm_met_alle_labels.json  cbs_hc_column.csv  line_with_dates.csv
docs/: conf.py
examples/: chart.json  highchart_bar_plot.json  highchart_example_bar_plot.py  highchart_example_column_plot.py  highchart_example_line_with_datetimes.py  highchart_example_line_with_years.py  highchart_plot_examples.py  plot_examples.py  plot_statline.py  statline_plot.ipynb
src/cbsplotlib/: __init__.py  cbs_hc_bar_sample.json  cbs_hc_bar_stacked_sample.json  cbs_hc_column_2ndcol.json  colors.py  highcharts.py  htmlviewer.py  settings.py  skeleton.py  utils.py
src/cbsplotlib/cbs_hc_defaults/: area_percentage_grouped.json  area_stacked_grouped.json  bar_percentage.json  bar_stacked.json  bar_stacked_percentage.json  bar_with_negative_stack.json  bubblechart_tourist.json  choropleth_youthcare.json  column.json  column_grouped.json  column_grouped_stacked_percentage.json  column_percentage.json  column_stacked_percentage.json  line.json  line_column_combination_grouped.json  pie_donut.json  polar_spider_line.json
src/cbsplotlib/js_queries/: highcharts-editor.min.js  highcharts-more.js
tests/: test_colors.py  test_skeleton.py  test_utils.py
