[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.uv]
environments = [
    "sys_platform == 'linux'",
]
cache-keys = [{ git = { commit = true, tags = true } }]


[project]
name = "cbsplotlib"
dynamic = ["version"]
description = "Frontend to matplotlib to create pictures in the CBS corporate identity"
readme = "README.rst"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Eelco van Vliet", email = "EVLT@cbs.nl" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
]
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "seaborn",
]

[project.optional-dependencies]
dev = [
    "black",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff>=0.8.0",
    "setuptools",
    "tox",
    "twine",
    "wheel",
]
testing = [
    "pytest",
    "pytest-cov",
    "setuptools",
]

[project.scripts]
highcharts_html_viewer = "cbsplotlib.htmlviewer:run"

[project.urls]
Documentation = "https://pyscaffold.org/"
Homepage = "https://github.com/pyscaffold/pyscaffold/"

version-file = "cbsplotlib/_version.py"
